samples/_failures_safe/1761530130_3bbaf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e0a2160.c: In function ‘main’:
./samples/SAFE/__tmp_7e0a2160.c:149:36: error: expected ‘)’ at end of input
  149 |         printf(" -> '%s'\n", tokens
      |               ~                    ^
      |                                    )
./samples/SAFE/__tmp_7e0a2160.c:149:9: error: expected declaration or statement at end of input
  149 |         printf(" -> '%s'\n", tokens
      |         ^~~~~~
./samples/SAFE/__tmp_7e0a2160.c:149:9: error: expected declaration or statement at end of input
